test: testes de validação e serviços